# aeda_py

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  build.ps1  build_executable.sh  gen_dataset.py  main.py  main_test.py  pyproject.toml  requirements.txt  ui_app.py
.github/workflows/: publish-pypi.yml
aeda/: __init__.py  analyzer.py  config.py
core/: __init__.py  html_report_generator.py  report.py
preprocessing/: __init__.py  dataset.py
report_components/: __init__.py  base_component.py
report_components/core_components/: categoircal_outlier_detection.py  composite_quality_score.py  distribution_modelling.py  label_noise_detection.py  llm_dataset_summary.py  near_duplicate_detection.py  outlier_detection.py  relational_consistency.py
report_components/simple_components/: dataset_overview.py  exact_duplicates.py  missing_values.py
utils/: consts.py  llm_service.py  test_llm_quick.py
