[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeda-py"
version = "1.0.1"
description = "Automated Exploratory Data Analysis with LLM-powered insights"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Volodymyr Kiriushyn", email = "zalorderon3331@gmail.com"}
]
keywords = ["data-quality", "eda", "machine-learning", "data-analysis", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "shap>=0.42.0",
    "pyarrow>=10.0.0",
    "polars>=0.15.0"
]

[project.urls]
Homepage = "https://github.com/aeda/aeda"
Documentation = "https://github.com/aeda/aeda#readme"
Repository = "https://github.com/aeda/aeda"

[project.scripts]
aeda = "aeda.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aeda*", "core*", "preprocessing*", "report_components*", "utils*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
